--- a/hello-pmvc/build.gradle
+++ b/hello-pmvc/build.gradle
@@ -22,14 +22,15 @@ plugins {
     id 'application'
     id 'idea'
     id 'jacoco'
-    id 'net.ltgt.apt' version '0.10'
-    id 'com.github.ben-manes.versions' version '0.15.0'
+    id 'net.ltgt.apt' version '0.13'
+    id 'com.github.ben-manes.versions' version '0.17.0'
     id 'com.github.hierynomus.license' version '0.11.0'
     id 'org.kordamp.gradle.stats' version '0.2.0'
 }
 
 repositories {
     jcenter()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencyUpdates.resolutionStrategy = {
@@ -76,7 +77,7 @@ dependencies {
     testCompile "com.google.truth:truth:$truthVersion"
     testCompile "org.jgotesting:jgotesting:$jgotestingVersion"
     testCompile "org.codehaus.groovy:groovy-all:$groovyVersion"
-    testCompile("org.spockframework:spock-guice:$spockVersion") {
+    testCompile("org.spockframework.spock:spock-guice:$spockVersion") {
         exclude group: 'org.codehaus.groovy', module: 'groovy-all'
     }
     testCompile('com.athaydes:spock-reports:1.3.2') {
