--- a/hello-pmvc/gradle.properties
+++ b/hello-pmvc/gradle.properties
@@ -1,21 +1,21 @@
 assertjVersion     = 3.8.0
 awaitilityVersion  = 3.0.0
 bootstrapfxVersion = 0.2.1
-groovyVersion      = 2.4.12
-guavaVersion       = 23.0
+groovyVersion      = 2.4.13
+guavaVersion       = 23.5-jre
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
 ikonliVersion      = 2.0.0
-jbehaveVersion     = 4.1.2
+jbehaveVersion     = 4.1.3
 jgivenVersion      = 0.15.3
 jgotestingVersion  = 0.12
 jukitoVersion      = 1.5
 junitVersion       = 4.12
-junitParamsVersion = 1.1.0
+junitParamsVersion = 1.1.1
 lombokVersion      = 1.16.18
 miglayoutVersion   = 5.0
-mockitoVersion     = 2.9.0
+mockitoVersion     = 2.12.0
 slf4jVersion       = 1.7.25
-spockVersion       = 1.1-groovy-2.4
+spockVersion       = 9f24b12589
 testfxVersion      = 4.0.6-alpha
 truthVersion       = 0.36
