--- a/github-api-01/gradle.properties
+++ b/github-api-01/gradle.properties
@@ -1,21 +1,21 @@
-awaitilityVersion  = 3.1.0
-bootstrapfxVersion = 0.2.2
-groovyVersion      = 2.4.14
-guavaVersion       = 24.1-jre
-guiceVersion       = 4.2.0
+awaitilityVersion  = 3.1.2
+bootstrapfxVersion = 0.2.3
+groovyVersion      = 2.5.2
+guavaVersion       = 26.0-jre
+guiceVersion       = 4.2.1
 hamcrestVersion    = 1.3
-ikonliVersion      = 2.1.1
-jacksonVersion     = 2.9.4
+ikonliVersion      = 2.4.0
+jacksonVersion     = 2.9.7
 jdeferredVersion   = 1.2.6
 jukitoVersion      = 1.5
 junitVersion       = 4.12
-lombokVersion      = 1.16.20
+lombokVersion      = 1.18.2
 mbassadorVersion   = 1.3.2
-miglayoutVersion   = 5.0
-mockitoVersion     = 2.16.0
+miglayoutVersion   = 5.2
+mockitoVersion     = 2.22.0
 reactfxVersion     = 2.0-M5
 retrofitVersion    = 2.4.0
 slf4jVersion       = 1.7.25
-spockVersion       = 1.1-groovy-2.4
+spockVersion       = 1.2-RC2-groovy-2.5
 testfxVersion      = 4.0.8-alpha
-wiremockVersion    = 2.15.0
+wiremockVersion    = 2.19.0
